--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./public/css/main.css">
-    <title>Travel destinations</title>
+    <title>Travel Website</title>
 </head>
 <body>
     <!---- this is the header ---->
@@ -41,11 +41,11 @@
             <div class="About-content">
                 <h2>About</h2>
                 <p>Reprehenderit voluptate cupidatat aliqua quis adipisicing voluptate velit sint elit pariatur eiusmod veniam velit nostrud.
-                    Do officia minim sunt ullamco do quis. Laboris cupidatat qui et quis culpa occaecat elit dolor excepteur. 
-                    Eu deserunt adipisicing dolor anim labore magna qui mollit irure Minim et culpa cupidatat minim commodo sint et reprehenderit. Esse voluptate elit irure nisi exercitation in esse eu. Dolore ad laborum in fugiat eu fugiat minim veniam eu laborum aute aliqua tempor. Eiusmod eiusmod consectetur voluptate duis in non et ex.</p>
+                    Do officia minim sunt ullamco do quis. Laboris cupidatat qui et quis culpa occaecat elit dolor excepteur.</p>
+                <p>Ad mollit aute proident reprehenderit ex tempor incididunt esse laboris ex consequat eu dolor. Nisi eiusmod ad voluptate ex. Pariatur reprehenderit officia sit officia eu amet adipisicing proident ea fugiat consectetur. Lorem aliqua voluptate magna ad adipisicing adipisicing labore aliquip ut eiusmod esse mollit incididunt. In officia exercitation quis aliqua laboris ipsum nulla cillum sunt amet. Aliquip dolor qui elit elit minim magna do. Et reprehenderit laborum ex cupidatat.</p>
                 <a class="about-link">Read More</a>
             </div>
-            <img class="about-img" src="./public/assets/images/about/pexels-jeshoots-com-Dubai.jpg" alt="about-img">
+           <img class="about-img" src="./public/assets/images/about/pexels-jeshoots-com-Dubai.jpg" alt="about-img">
     </section>
     <section class="Attractions-container">
             <div class="Attraction-title">
