--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img class="hero-img" src="./public/assets/images/hero/pexel-sapasaric-.jpg" alt="hero-image">
             </div>
             <div class="hero-content">
-                <h1>Explore your next destination</h1>
+                <h1>Discover the amazing city of Dubai</h1>
                 <div class="btn"><button class="hero-btn">Learn More</button></div>
             </div>
     </section>
@@ -97,13 +97,25 @@
     <div class="Accommodation-and-review">
     <section class="reviews-container">
         <div class="reviews-content">
-            <h2>Reviews</h2>
+            <h2>Frequently asked question</h2>
         </div>
-        <div class="review-cards">
+        <div class="faq-cards">
             <div class="card">
-                    <i class="fa-solid fa-user"></i>
                 <div class="card-body">
-                    <h3></h3>
+                    <h3>When is th best time to visit Dubai</h3>
+                    <p>Ipsum ut officia minim voluptate.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h3>where are the to attractions in Dubai</h3>
+                    <p>Cillum deserunt excepteur officia.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h3>whats sthe best time of the year to visit</h3>
+                    <p>Ea do et incididunt elit labore anim.</p>
                 </div>
             </div>
         </div>
