--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <h1 class="logo">Visit Dubai</h1>
             <div class="nav-items">
                 <ul>
-                    <li><a href="#">Accommodation</a></li>
                     <li><a href="#">Attractions</a></li>
+                    <li><a href="#">Accommodation</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
@@ -31,7 +32,7 @@
                 <img class="hero-img" src="./public/assets/images/hero/pexel-sapasaric-.jpg" alt="hero-image">
             </div>
             <div class="hero-content">
-                <h1>Discover the amazing city of Dubai</h1>
+                <h1>your Dubai Adventure awaits</h1>
                 <div class="btn"><button class="hero-btn">Learn More</button></div>
             </div>
     </section>
@@ -102,21 +103,24 @@
         <div class="faq-cards">
             <div class="card">
                 <div class="card-body">
-                    <h3>When is th best time to visit Dubai</h3>
+                    <h3>When is the best time to visit Dubai</h3>
                     <p>Ipsum ut officia minim voluptate.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h3>where are the to attractions in Dubai</h3>
+                    <h3>what are the top attractions in Dubai</h3>
                     <p>Cillum deserunt excepteur officia.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h3>whats sthe best time of the year to visit</h3>
+                    <h3>what's sthe best time of the year to visit</h3>
                     <p>Ea do et incididunt elit labore anim.</p>
                 </div>
+            </div>
+            <div class="card">
+                <div class="card-body"></div>
             </div>
         </div>
     </section>
