adding to html and css

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
 </div>
 
     <!---- this is the review section   --->
-    <div class="Accommodation-and-review">
     <section class="reviews-container">
         <div class="reviews-content">
             <h2>Frequently asked question</h2>
@@ -104,19 +103,19 @@
             <div class="card">
                 <div class="card-body">
                     <h3>When is the best time to visit Dubai</h3>
-                    <p>Ipsum ut officia minim voluptate.</p>
+                    <p>Ipsum ut officia minim voluptateOfficia id consequat magna occaecat et veniam culpa culpa ullamco dolore aute et.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
                     <h3>what are the top attractions in Dubai</h3>
-                    <p>Cillum deserunt excepteur officia.</p>
+                    <p>Cillum deserunt excepteur officiaAliqua commodo eu deserunt ullamco eu est elit aliquip.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card-body">
                     <h3>what's sthe best time of the year to visit</h3>
-                    <p>Ea do et incididunt elit labore anim.</p>
+                    <p>Ea do et incididunt elit labore animEnim quis irure est excepteur voluptate labore eiusmod quis dolor minim.</p>
                 </div>
             </div>
             <div class="card">
@@ -159,7 +158,6 @@
                 </div>
             </div>
     </section>
-</div>
     
     <!----- this is the footer section   ------>
     <footer>
