adding to html and css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <li><a href="#">Accommodation</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact Us</a></li>
+                    
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li></li>
                 </ul>
             </div>
         </nav>
@@ -114,8 +118,8 @@
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h3>what's sthe best time of the year to visit</h3>
-                    <p>Ea do et incididunt elit labore animEnim quis irure est excepteur voluptate labore eiusmod quis dolor minim.</p>
+                    <h3></h3>
+                    <p></p>
                 </div>
             </div>
             <div class="card">
@@ -154,6 +158,13 @@
                         <h3>Jumeirah beach hotel</h3>
                         <p>Aliquip veniam et enim nisi ea incididunt Lorem sunt sint nisi consectetur.</p>
                         <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
+                    <div class="card-content">
+                        <h3></h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
