--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
                 <input type="text" id="name" name="name" required>
                 <label for="email">email:</label>
                 <input type="text" id="email" name="email" required><br>
-                <label for="message">message:</label>
+                <label for="message">message:</label><br>
                 <textarea name="message" id="message"></textarea>
-                
             </form>
         </div>
     </section>
@@ -198,8 +197,14 @@
                         <li><i class="fa-solid fa-phone"></i>Phone number: </li>
                         <li><i class="fa-solid fa-envelope"></i>email: info@exploredubai.com</li> 
                     </ul>
+                    <div class="icons">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
                 </div>
                 <div class="footer-right">
+                   
                     <p>2024 ExploreDubai</p>
                 </div>
             </div>
