--- a/index.html
+++ b/index.html
@@ -62,41 +62,41 @@
 
             <div class="Attraction-cards">
                 <!-----  card-1 ----->
-                <div class="card">
+                <article class="card">
                         <img class="card-img" src="./public/assets/images/Attractions/pexels-kenza-benaouda-desert-safari.jpg" alt="card-img">
                     <div class="card-body">
                         <h3>Desert Safari</h3>
                         <p>Lorem ex magna dolor in.Esse eiusmod dolore labore non duis nisi sit eu ad aute.</p>
                         <a class="card-link" href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
                 <!-----  card-2 ----->
-                <div class="card">
+                <article class="card">
                         <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
                     <div class="card-body">
                         <h3>Burj Khalifa</h3>
                         <p>Magna magna excepteur non proident aliqua culpa et dolor aliquip exercitation eu fugiat cillum sit.</p>
                         <a class="card-link" href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
                 <!-----  card-3 ----->
-                <div class="card">
+                <article class="card">
                          <img class="card-img" src="./public/assets/images/Attractions/pexels-olliecraig1-aquaventer-waterpark.jpg" alt="card-img">
                     <div class="card-body">
                         <h3>Aquaventure Waterpark</h3>
                         <p>Sunt enim sint nostrud officia aliquip quis irure esse do ea laboris irure.</p>
                         <a class="card-link" href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
                 <!------ card-4 ----->
-                <div class="card">
+                <article class="card">
                     <img class="card-img" src="./public/assets/images/Attractions/pexels-apasaric-dubai-fountain.jpg" alt="card-img">
                     <div class="card-content">
                         <h3>Dubai Fountain</h3>
                         <p>Laboris nostrud qui nostrud eu elit Et occaecat ea voluptate duis Ex et mollit deserunt dolor ipsum nostrud proident.</p>
                         <a class="card-link" href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
             </div>
     </section>
 </div>
@@ -107,28 +107,29 @@
             <h2>Frequently asked question</h2>
         </div>
         <div class="faq-cards">
-            <div class="card">
+            <article class="card">
                 <div class="card-body">
                     <h3>When is the best time to visit Dubai</h3>
                     <p>Ipsum ut officia minim voluptateOfficia id consequat magna occaecat et veniam culpa culpa ullamco dolore aute et.</p>
                 </div>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
                 <div class="card-body">
                     <h3>what are the top attractions in Dubai</h3>
                     <p>Cillum deserunt excepteur officiaAliqua commodo eu deserunt ullamco eu est elit aliquip.</p>
                 </div>
-            </div>
-            <div class="card">
+            </article>
+            <article class="card">
                 <div class="card-body">
                     <h3></h3>
                     <p></p>
                 </div>
-            </div>
-            <div class="card">
+            </article>
+            <!-- faq-card- -->
+            <article class="card">
                 <div class="card-body"></div>
             </div>
-        </div>
+        </section>
     </section>
     <!-- this sections is for Accommodations -->
     <section class="Accommodation-container">
@@ -137,39 +138,39 @@
             </div>
             <div class="Accomm-cards">
                 <!-- Accomm-card-1 -->
-                <div class="card">
+                <article class="card">
                         <img class="card-image" src="./public/assets/images/Accom/abhishek-roy-atlantis-dubai-palm.jpg" alt="card-image">
                     <div class="card-content">
                         <h3>Atlantis Dubai Palm</h3>
                         <p>Ullamco et anim esse reprehenderit reprehenderit enim id cillum Esse.</p>
                         <a href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
                 <!--- Accomm-card-2 --->
-                <div class="card">
-                    <img class="card-image" src="./public/assets/images/Accom/oscar-aragon-burj-al-arab.jpg" alt="card-image">
+                <article class="card">
+                        <img class="card-image" src="./public/assets/images/Accom/oscar-aragon-burj-al-arab.jpg" alt="card-image">
                     <div class="card-content">
                         <h3>Burj al arab</h3>
                         <p>Est incididunt duis eu ad laborum cupidatat et.Incididunt et cupidatatCupidatat dolore.</p>
                         <a href="#">Learn More</a>
                     </div>
-                </div>
+                </article>
                 <!--- Accomm-card-3 --->
-                <div class="card">
+                <article class="card">
                         <img class="card-image" src="./public/assets/images/Accom/marc-deriaz-jumeirah-beach-hotel.jpg" alt="card-image">
                     <div class="card-content">
                         <h3>Jumeirah beach hotel</h3>
                         <p>Aliquip veniam et enim nisi ea incididunt Lorem sunt sint nisi consectetur.</p>
                         <a href="#">Learn More</a>
                     </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
+                </article>
+                <article class="card">
+                        <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
                     <div class="card-content">
                         <h3></h3>
                         <p></p>
                     </div>
-                </div>
+                </article>
             </div>
     </section>
     <section class="contact-container">
@@ -194,7 +195,7 @@
             <div class="nav-footer">
                 <div class="nav-footer-items">
                     <ul>
-                        <li><i class="fa-solid fa-phone"></i>Phone number: </li>
+                        <i class="fa-solid fa-phone"></i>Phone number: 
                         <li><i class="fa-solid fa-envelope"></i>email: info@exploredubai.com</li> 
                     </ul>
                     <div class="icons">
