--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     <!---- this is the attractions section  ---->
     <div class="Attraction-and-About">
         <section class="About-container">
-            <div class="About-content">
-                <h2>About</h2>
-                <p>Reprehenderit voluptate cupidatat aliqua quis adipisicing voluptate velit sint elit pariatur eiusmod veniam velit nostrud.
-                    Do officia minim sunt ullamco do quis. Laboris cupidatat qui et quis culpa occaecat elit dolor excepteur.</p>
-                <p>Ad mollit aute proident reprehenderit ex tempor incididunt esse laboris ex consequat eu dolor. Nisi eiusmod ad voluptate ex. Pariatur reprehenderit officia sit officia eu amet adipisicing proident ea fugiat consectetur. Lorem aliqua voluptate magna ad adipisicing adipisicing labore aliquip ut eiusmod esse mollit incididunt. In officia exercitation quis aliqua laboris ipsum nulla cillum sunt amet. Aliquip dolor qui elit elit minim magna do. Et reprehenderit laborum ex cupidatat.</p>
-                <a class="about-link">Read More</a>
-            </div>
-           <img class="about-img" src="./public/assets/images/about/pexels-jeshoots-com-Dubai.jpg" alt="about-img">
-    </section>
+                <div class="About-content">
+                    <h2>About</h2>
+                    <p>Reprehenderit voluptate cupidatat aliqua quis adipisicing voluptate velit sint elit pariatur eiusmod veniam velit nostrud.
+                        Do officia minim sunt ullamco do quis. Laboris cupidatat qui et quis culpa occaecat elit dolor excepteur.</p>
+                    <p>Ad mollit aute proident reprehenderit ex tempor incididunt esse laboris ex consequat eu dolor. Nisi eiusmod ad voluptate ex. Pariatur reprehenderit officia sit officia eu amet adipisicing proident ea fugiat consectetur. Lorem aliqua voluptate magna ad adipisicing adipisicing labore aliquip ut eiusmod esse mollit incididunt. In officia exercitation quis aliqua laboris ipsum nulla cillum sunt amet. Aliquip dolor qui elit elit minim magna do. Et reprehenderit laborum ex cupidatat.</p>
+                    <a class="about-link">Read More</a>
+                </div>
+                    <img class="about-img" src="./public/assets/images/about/pexels-jeshoots-com-Dubai.jpg" alt="about-img">
+        </section>
     <section class="Attractions-container">
             <div class="Attraction-title">
                 <h2>Attractions</h2>
@@ -63,39 +63,39 @@
             <div class="Attraction-cards">
                 <!-----  card-1 ----->
                 <article class="card">
-                        <img class="card-img" src="./public/assets/images/Attractions/pexels-kenza-benaouda-desert-safari.jpg" alt="card-img">
-                    <div class="card-body">
-                        <h3>Desert Safari</h3>
-                        <p>Lorem ex magna dolor in.Esse eiusmod dolore labore non duis nisi sit eu ad aute.</p>
-                        <a class="card-link" href="#">Learn More</a>
-                    </div>
+                            <img class="card-img" src="./public/assets/images/Attractions/pexels-kenza-benaouda-desert-safari.jpg" alt="card-img">
+                        <div class="card-body">
+                            <h3>Desert Safari</h3>
+                            <p>Lorem ex magna dolor in.Esse eiusmod dolore labore non duis nisi sit eu ad aute.</p>
+                            <a class="card-link" href="#">Learn More</a>
+                        </div>
                 </article>
                 <!-----  card-2 ----->
                 <article class="card">
-                        <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
-                    <div class="card-body">
-                        <h3>Burj Khalifa</h3>
-                        <p>Magna magna excepteur non proident aliqua culpa et dolor aliquip exercitation eu fugiat cillum sit.</p>
-                        <a class="card-link" href="#">Learn More</a>
-                    </div>
+                            <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
+                        <div class="card-body">
+                            <h3>Burj Khalifa</h3>
+                            <p>Magna magna excepteur non proident aliqua culpa et dolor aliquip exercitation eu fugiat cillum sit.</p>
+                            <a class="card-link" href="#">Learn More</a>
+                        </div>
                 </article>
                 <!-----  card-3 ----->
                 <article class="card">
-                         <img class="card-img" src="./public/assets/images/Attractions/pexels-olliecraig1-aquaventer-waterpark.jpg" alt="card-img">
-                    <div class="card-body">
-                        <h3>Aquaventure Waterpark</h3>
-                        <p>Sunt enim sint nostrud officia aliquip quis irure esse do ea laboris irure.</p>
-                        <a class="card-link" href="#">Learn More</a>
-                    </div>
+                            <img class="card-img" src="./public/assets/images/Attractions/pexels-olliecraig1-aquaventer-waterpark.jpg" alt="card-img">
+                        <div class="card-body">
+                            <h3>Aquaventure Waterpark</h3>
+                            <p>Sunt enim sint nostrud officia aliquip quis irure esse do ea laboris irure.</p>
+                            <a class="card-link" href="#">Learn More</a>
+                        </div>
                 </article>
                 <!------ card-4 ----->
                 <article class="card">
-                    <img class="card-img" src="./public/assets/images/Attractions/pexels-apasaric-dubai-fountain.jpg" alt="card-img">
-                    <div class="card-content">
-                        <h3>Dubai Fountain</h3>
-                        <p>Laboris nostrud qui nostrud eu elit Et occaecat ea voluptate duis Ex et mollit deserunt dolor ipsum nostrud proident.</p>
-                        <a class="card-link" href="#">Learn More</a>
-                    </div>
+                            <img class="card-img" src="./public/assets/images/Attractions/pexels-apasaric-dubai-fountain.jpg" alt="card-img">
+                        <div class="card-content">
+                            <h3>Dubai Fountain</h3>
+                            <p>Laboris nostrud qui nostrud eu elit Et occaecat ea voluptate duis Ex et mollit deserunt dolor ipsum nostrud proident.</p>
+                            <a class="card-link" href="#">Learn More</a>
+                        </div>
                 </article>
             </div>
     </section>
@@ -107,27 +107,34 @@
             <h2>Frequently asked question</h2>
         </div>
         <div class="faq-cards">
+            <!-- faq-1 -->
             <article class="card">
-                <div class="card-body">
-                    <h3>When is the best time to visit Dubai</h3>
-                    <p>Ipsum ut officia minim voluptateOfficia id consequat magna occaecat et veniam culpa culpa ullamco dolore aute et.</p>
-                </div>
+                    <div class="card-body">
+                        <h3>When is the best time to visit Dubai</h3>
+                        <p>Ipsum ut officia minim voluptateOfficia id consequat magna occaecat et veniam culpa culpa ullamco dolore aute et.</p>
+                    </div>
             </article>
+             <!-- faq-2 -->
             <article class="card">
-                <div class="card-body">
-                    <h3>what are the top attractions in Dubai</h3>
-                    <p>Cillum deserunt excepteur officiaAliqua commodo eu deserunt ullamco eu est elit aliquip.</p>
-                </div>
+                    <div class="card-body">
+                        <h3>what are the top attractions in Dubai</h3>
+                        <p>Cillum deserunt excepteur officiaAliqua commodo eu deserunt ullamco eu est elit aliquip.</p>
+                    </div>
             </article>
+             <!-- faq-3 -->
             <article class="card">
-                <div class="card-body">
-                    <h3></h3>
-                    <p></p>
-                </div>
+                    <div class="card-body">
+                        <h3></h3>
+                        <p></p>
+                    </div>
             </article>
-            <!-- faq-card- -->
+            <!-- faq-4 -->
             <article class="card">
-                <div class="card-body"></div>
+                    <div class="card-body">
+                        <h3></h3>
+                        <p></p>
+                    </div>
+            </article>
             </div>
         </section>
     </section>
@@ -164,11 +171,13 @@
                         <a href="#">Learn More</a>
                     </div>
                 </article>
+                <!--  Accom-card-4 -->
                 <article class="card">
                         <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
                     <div class="card-content">
-                        <h3></h3>
-                        <p></p>
+                        <h3>Rixos The Palm Hotel </h3>
+                        <p>Aliquip aliqua ea consectetur laboris.Exercitation mollit velit dolor eu officia.</p>
+                        <a href="#">Learn More</a>
                     </div>
                 </article>
             </div>
@@ -205,7 +214,6 @@
                     </div>
                 </div>
                 <div class="footer-right">
-                   
                     <p>2024 ExploreDubai</p>
                 </div>
             </div>
