updating html and css

--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
             <div class="nav-footer">
                 <div class="nav-footer-items">
                     <ul>
-                        <i class="fa-solid fa-phone"></i>Phone number: 
-                        <li><i class="fa-solid fa-envelope"></i>email: info@exploredubai.com</li> 
+                        <li><i class="fa-solid fa-phone"></i> +971 123 456 789</li> 
+                        <li><i class="fa-solid fa-envelope"></i> info@exploredubai.com</li> 
+                        <li></li><i class="fa-solid fa-location-dot"></i>Address: 123 Dubai Street, UAE</li>
                     </ul>
                     <div class="icons">
                         <i class="fa-brands fa-instagram"></i>
@@ -214,7 +215,7 @@
                     </div>
                 </div>
                 <div class="footer-right">
-                    <p>2024 ExploreDubai</p>
+                    <p>© 2024 ExploreDubais all rigths reserved.</p>
                 </div>
             </div>
         </nav>
