updating html and css

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!---- this is the header ---->
     <header>
         <nav class="nav-header">
-                <h1 class="logo">Visit Dubai</h1>
+                <a href="#visitDubia"><h1 class="logo">Visit Dubai</h1></a>
             <div class="nav-items">
                 <ul>
                     <li><a href="#">Attractions</a></li>
-                    <li><a href="#">Accommodation</a></li>
                     <li><a href="#">About</a></li>
+                    <li><a href="#">Accommodation</a></li>
                     <li><a href="#">Contact Us</a></li>
                 <div>
                     <ul>
@@ -189,11 +189,11 @@
         <div class="contact-card">
             <form class="contact-form">
                 <label for="name">name:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" placeholder="name" name="name" required>
                 <label for="email">email:</label>
-                <input type="text" id="email" name="email" required><br>
+                <input type="text" placeholder="email" id="email" name="email" required><br>
                 <label for="message">message:</label><br>
-                <textarea name="message" id="message"></textarea>
+                <textarea name="message" placeholder="message" id="message"></textarea>
             </form>
         </div>
     </section>
@@ -204,15 +204,15 @@
             <div class="nav-footer">
                 <div class="nav-footer-items">
                     <ul>
-                        <li><i class="fa-solid fa-phone"></i> +971 123 456 789</li> 
-                        <li><i class="fa-solid fa-envelope"></i> info@exploredubai.com</li> 
-                        <li></li><i class="fa-solid fa-location-dot"></i>Address: 123 Dubai Street, UAE</li>
+                        <li><a href="#visitDubai"><h1>visit Dubai</h1></a></li>
+                        <li class="footer-txt"><i class="fa-solid fa-phone"></i>+971 123 456 789</li> 
+                        <li class="footer-txt"><i class="fa-solid fa-envelope"></i> info@exploredubai.com</li> 
+                        <li class="footer-txt"><i class="fa-solid fa-location-dot"></i>Address: 123 Dubai Street, UAE</li>
                     </ul>
-                    <div class="icons">
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                    </div>
+                 <div class="icons">
+                        <a class="footer-icon" href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="footer-icon" href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a class="footer-instagram" href="#"><i class="fa-brands fa-twitter"></i></a>
                 </div>
                 <div class="footer-right">
                     <p>© 2024 ExploreDubais all rigths reserved.</p>
