updating html and css

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
              <!-- faq-3 -->
             <article class="card">
                     <div class="card-body">
-                        <h3></h3>
-                        <p></p>
+                        <h3>what is the local currency </h3>
+                        <p>Laboris aliqua ullamco eu aliqua minim et commodo id ullamco consequat non culpa reprehenderit nisi.</p>
                     </div>
             </article>
             <!-- faq-4 -->
             <article class="card">
                     <div class="card-body">
-                        <h3></h3>
-                        <p></p>
+                        <h3>what language do they speak</h3>
+                        <p>Nulla occaecat commodo proident excepteurAd quis ut incididunt deserunt eiusmod non exercitation.</p>
                     </div>
             </article>
             </div>
