adding the ham burger menu to the mobile version

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
     <!---- this is the header ---->
     <header>
+        <a href="#visitDubia"><h1 class="logo">Visit Dubai</h1></a>
+    <div class="left-screen-menu">
         <nav class="nav-header">
-                <a href="#visitDubia"><h1 class="logo">Visit Dubai</h1></a>
+                
             <div class="nav-items">
                 <ul>
                     <li><a href="#">Attractions</a></li>
@@ -31,8 +33,16 @@
                 </div>
                 </ul>
             </div>
-        </nav>
+            </nav>
+        </div>
     </header>
+        <button type="button" class="ham-burger">
+            <div class="burger-bar bar-top"></div>
+            <div class="burger-bar bar-center"></div>
+            <div class="burger-bar bar-bottom"></div>
+        </button>
+    <!---- this is the header ---->
+
     <main>
     <!---- this is the hero-section   ---->
     <section class="hero-container">
