adding to the mobile verison of the website using css

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
                         <div class="card-body">
                             <h3>Burj Khalifa</h3>
-                            <p>Magna magna excepteur non proident aliqua culpa et dolor aliquip exercitation eu fugiat cillum sit.</p>
+                            <p>Tempor ullamco fugiat nisi deserunt nisi enim exercitation.</p>
                             <a class="card-link" href="#">Learn More</a>
                         </div>
                 </article>
