making adjustments to the mobile verison

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Travel Website</title>
 </head>
 <body>
+    <div class="container">
     <!---- this is the header ---->
     <header>
         <a href="#visitDubia"><h1 class="logo">Visit Dubai</h1></a>
@@ -66,10 +67,11 @@
                 </div>
                     <img class="about-img" src="./public/assets/images/about/pexels-jeshoots-com-Dubai.jpg" alt="about-img">
         </section>
+<!---- attraction-section ---->
     <section class="Attractions-container">
-            <div class="Attraction-title">
-                <h2>Attractions</h2>
-            </div>
+        <div class="Attraction-title">
+            <h2>Attractions</h2>
+        </div>
 
             <div class="Attraction-cards">
                 <!-----  card-1 ----->
@@ -82,45 +84,48 @@
                         </div>
                 </article>
                 <!-----  card-2 ----->
-                <article class="card">
-                            <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
-                        <div class="card-body">
-                            <h3>Burj Khalifa</h3>
-                            <p>Tempor ullamco fugiat nisi deserunt nisi enim exercitation.</p>
-                            <a class="card-link" href="#">Learn More</a>
-                        </div>
-                </article>
+                   <article class="card">
+                        <img class="card-img" src="./public/assets/images/Attractions/pexels-deepak-ramesha-burj-khalifa.jpg" alt="card-img">
+                    <div class="card-body">
+                        <h3>Burj Khalifa</h3>
+                        <p>Tempor ullamco fugiat nisi deserunt nisi enim exercitation.</p>
+                        <a class="card-link" href="#">Learn More</a>
+                    </div>
+                    </article>
                 <!-----  card-3 ----->
                 <article class="card">
-                            <img class="card-img" src="./public/assets/images/Attractions/pexels-olliecraig1-aquaventer-waterpark.jpg" alt="card-img">
-                        <div class="card-body">
-                            <h3>Aquaventure Waterpark</h3>
-                            <p>Sunt enim sint nostrud officia aliquip quis irure esse do ea laboris irure.</p>
-                            <a class="card-link" href="#">Learn More</a>
-                        </div>
+                    <img class="card-img" src="./public/assets/images/Attractions/pexels-olliecraig1-aquaventer-waterpark.jpg" alt="card-img">
+                <div class="card-body">
+                    <h3>Aquaventure Waterpark</h3>
+                    <p>Sunt enim sint nostrud officia aliquip quis irure esse do ea laboris irure.</p>
+                    <a class="card-link" href="#">Learn More</a>
+                </div>
                 </article>
                 <!------ card-4 ----->
                 <article class="card">
-                            <img class="card-img" src="./public/assets/images/Attractions/pexels-apasaric-dubai-fountain.jpg" alt="card-img">
-                        <div class="card-content">
-                            <h3>Dubai Fountain</h3>
-                            <p>Laboris nostrud qui nostrud eu elit Et occaecat ea voluptate duis Ex et mollit deserunt dolor ipsum nostrud proident.</p>
-                            <a class="card-link" href="#">Learn More</a>
-                        </div>
-                </article>
-            </div>
+                    <img class="card-img" src="./public/assets/images/Attractions/pexels-apasaric-dubai-fountain.jpg" alt="card-img">
+                <div class="card-content">
+                    <h3>Dubai Fountain</h3>
+                    <p>Laboris nostrud qui nostrud eu elit Et occaecat ea voluptate duis Ex et mollit deserunt dolor ipsum nostrud proident.</p>
+                    <a class="card-link" href="#">Learn More</a>
+                </div>
+            </article>
+        </div>
     </section>
+<!---- attraction-section ---->
 </div>
 
-    <!---- this is the review section   --->
+<!---- this is the review section   --->
     <section class="reviews-container">
         <div class="reviews-content">
             <h2>Frequently asked question</h2>
         </div>
         <div class="faq-cards">
-            <!-- faq-1 -->
+
+
+        <!---- faq-card-1 ---->
             <article class="card">
-                <div class="card-body"> 
+                <div class="faq-card-body"> 
                     <h3>When is the best time to visit Dubai</h3>
                     <button class="faq-toggle"><i class="bi bi-plus"></i></button>    
                 <div class="answer-text">
@@ -128,7 +133,10 @@
                 </div>
                 </div>
             </article>
-             <!-- faq-2 -->
+        <!---- faq-card-1 ---->
+
+
+        <!---- faq-card-2 ---->
             <article class="card">
                     <div class="card-body">
                         <h3>what are the top attractions in Dubai</h3>
@@ -138,7 +146,10 @@
                         <p>Cillum deserunt excepteur officiaAliqua commodo eu deserunt ullamco eu est elit aliquipIpsum voluptate nostrud do cupidatat ad. Commodo excepteur sit eiusmod pariatur ex ipsum eiusmod Lorem. Nulla laboris eiusmod veniam ipsum aliqua aute ipsum sint aliqua reprehenderit ipsum aute culpa do.</p>
                     </div>
             </article>
-             <!-- faq-3 -->
+        <!---- faq-card-2 ---->
+
+
+        <!---- faq-card-3 ---->
             <article class="card">
                     <div class="card-body">
                         <h3>what is the local currency</h3>
@@ -148,63 +159,84 @@
                         <p>Laboris aliqua ullamco eu aliqua minim et commodo id ullamco consequat non culpa reprehenderit nisi.Excepteur sunt occaecat deserunt ea quis deserunt do deserunt consectetur ipsum.</p>
                     </div>
             </article>
-            <!-- faq-4 -->
+        <!---- faq-card-3 ---->
+
+
+        <!---- faq-card-4 ---->
             <article class="card">
-                    <div class="card-body">
-                        <h3>what language do they speak</h3>
-                        <button class="faq-toggle"><i class="bi bi-plus"></i></button>
-                    </div>
+                <div class="card-body">
+                    <h3>what language do they speak</h3>
+                    <button class="faq-toggle"><i class="bi bi-plus"></i></button>
+                </div>
                     <div class="answer-text">
-                        <p>Nulla occaecat commodo proident excepteurAd quis ut incididunt deserunt eiusmod non exercitation.</p>
-                    </div>
+                    <p>Nulla occaecat commodo proident excepteurAd quis ut incididunt deserunt eiusmod non exercitation.</p>
+                </div>
             </article>
-            </div>
-        </section>
+        <!---- faq-card-4 ---->
+        </div>
     </section>
-    <!-- this sections is for Accommodations -->
+<!---- this is the review section   --->
+
+    </section>
+<!-- this sections is for Accommodations -->
     <section class="Accommodation-container">
-            <div class="Accommodation-content">
-                <h2>Accommodation</h2>
-            </div>
-            <div class="Accomm-cards">
-                <!-- Accomm-card-1 -->
+        <div class="Accommodation-content">
+            <h2>Accommodation</h2>
+        </div>
+        <div class="Accomm-cards">
+            <!-- Accomm-card-1 -->
                 <article class="card">
-                        <img class="card-image" src="./public/assets/images/Accom/abhishek-roy-atlantis-dubai-palm.jpg" alt="card-image">
-                    <div class="card-content">
-                        <h3>Atlantis Dubai Palm</h3>
-                        <p>Ullamco et anim esse reprehenderit reprehenderit enim id cillum Esse.</p>
-                        <a href="#">Learn More</a>
-                    </div>
+                    <img class="card-image" src="./public/assets/images/Accom/abhishek-roy-atlantis-dubai-palm.jpg" alt="card-image">
+                <div class="card-content">
+                    <h3>Atlantis Dubai Palm</h3>
+                    <p>Ullamco et anim esse reprehenderit reprehenderit enim id cillum Esse.</p>
+                    <a href="#">Learn More</a>
+                </div>
                 </article>
-                <!--- Accomm-card-2 --->
+            <!-- Accomm-card-1 -->
+
+
+            <!--- Accomm-card-2 --->
                 <article class="card">
-                        <img class="card-image" src="./public/assets/images/Accom/oscar-aragon-burj-al-arab.jpg" alt="card-image">
-                    <div class="card-content">
-                        <h3>Burj al arab</h3>
-                        <p>Est incididunt duis eu ad laborum cupidatat et.Incididunt et cupidatatCupidatat dolore.</p>
-                        <a href="#">Learn More</a>
-                    </div>
+                    <img class="card-image" src="./public/assets/images/Accom/oscar-aragon-burj-al-arab.jpg" alt="card-image">
+                <div class="card-content">
+                    <h3>Burj al arab</h3>
+                    <p>Est incididunt duis eu ad laborum cupidatat et.Incididunt et cupidatatCupidatat dolore.</p>
+                    <a href="#">Learn More</a>
+                </div>
                 </article>
-                <!--- Accomm-card-3 --->
+            <!--- Accomm-card-2 --->
+
+
+            <!--- Accomm-card-3 --->
                 <article class="card">
-                        <img class="card-image" src="./public/assets/images/Accom/marc-deriaz-jumeirah-beach-hotel.jpg" alt="card-image">
-                    <div class="card-content">
-                        <h3>Jumeirah beach hotel</h3>
-                        <p>Aliquip veniam et enim nisi ea incididunt Lorem sunt sint nisi consectetur.</p>
-                        <a href="#">Learn More</a>
-                    </div>
+                    <img class="card-image" src="./public/assets/images/Accom/marc-deriaz-jumeirah-beach-hotel.jpg" alt="card-image">
+                <div class="card-content">
+                    <h3>Jumeirah beach hotel</h3>
+                    <p>Aliquip veniam et enim nisi ea incididunt Lorem sunt sint nisi consectetur.</p>
+                    <a href="#">Learn More</a>
+                </div>
                 </article>
-                <!--  Accom-card-4 -->
+            <!--- Accomm-card-3 --->
+
+
+            <!---  Accom-card-4 --->
                 <article class="card">
-                        <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
-                    <div class="card-content">
-                        <h3>Rixos The Palm Hotel </h3>
-                        <p>Aliquip aliqua ea consectetur laboris.Exercitation mollit velit dolor eu officia.</p>
-                        <a href="#">Learn More</a>
-                    </div>
+                    <img class="card-image" src="./public/assets/images/Accom/pexels-kadiravsarr-Rixos-The-Palm-Hotel-&-Suites.jpg" alt="card-image">
+                <div class="card-content">
+                    <h3>Rixos The Palm Hotel </h3>
+                    <p>Aliquip aliqua ea consectetur laboris.Exercitation mollit velit dolor eu officia.</p>
+                    <a href="#">Learn More</a>
+                </div>
                 </article>
+            <!---  Accom-card-4 --->
             </div>
     </section>
+<!-- this sections is for Accommodations -->
+
+
+
+<!---- contact-section ---->
     <section class="contact-container">
         <div class="contact-content">
             <h2>contact</h2>
@@ -220,8 +252,11 @@
             </form>
         </div>
     </section>
+<!---- contact-section ---->
+
+
     
-    <!----- this is the footer section   ------>
+<!----- this is the footer section  ------>
     <footer>
         <nav>
             <div class="nav-footer">
@@ -245,5 +280,6 @@
     </footer>
     </main>
     <script src="/public/js/faq.js"></script>
+    </div>
 </body>
 </html>
