--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Contact Us</a></li>
                 <div>
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                      </ul>
